--- a/ecoplastol/frmMain.xaml
+++ b/ecoplastol/frmMain.xaml
@@ -5,44 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ecoplastol"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowState="Maximized" Closing="Window_Closing">
+        Title="MainWindow" Height="450" Width="1149.5" WindowState="Maximized" Closing="Window_Closing">
     <Grid>
-        <Button 
-            Name="btnParametry" 
-            Content="PARAMETRY" 
-            HorizontalContentAlignment="Left" 
-            HorizontalAlignment="Left" 
-            Height="40" 
-            Margin="27,38,0,0" 
-            VerticalAlignment="Top" 
-            Width="200" 
-            FontSize="24" 
-            Padding="10,0,0,0"
-            Click="btnParametry_Click"/>
-        <Button 
-            Name="btnWyroby" 
-            Content="WYROBY" 
-            HorizontalContentAlignment="Left" 
-            HorizontalAlignment="Left" 
-            Margin="27,83,0,0" 
-            VerticalAlignment="Top" 
-            Width="200" 
-            Click="btnWyroby_Click" 
-            Height="40" 
-            Padding="10,0,0,0"
-            FontSize="24"/>
-        <Button Name="btnPlanowanie" 
-                Content="PLANOWANIE" 
-                HorizontalContentAlignment="Left"
-                HorizontalAlignment="Left" 
-                Margin="27,128,0,0" 
-                VerticalAlignment="Top" 
-                Width="200"
-                Height="40"
-                Padding="10,0,0,0"
-                FontSize="24" Click="BtnPlanowanie_Click"/>
-        <Button Content="KONFIGURACJA" HorizontalAlignment="Left" Margin="257,38,0,0" VerticalAlignment="Top" Width="111" Click="Button_Click" Height="40"/>
-        <Button Content="PLANOWANIE 2" HorizontalAlignment="Left" Margin="257,83,0,0" VerticalAlignment="Top" Width="111" Name="btnPlanowanie2" Click="BtnPlanowanie2_Click" RenderTransformOrigin="0.527,2.25" Height="40"/>
-
+        <Button Name="btnParametry" Content="PARAMETRY" HorizontalContentAlignment="Left" Height="40" Margin="28,83,564,296" Width="200" FontSize="24" Padding="10,0,0,0" Click="btnParametry_Click"/>
+        <Button Name="btnWyroby" Content="WYROBY" HorizontalContentAlignment="Left" Margin="28,38,564,341" Width="200" Click="btnWyroby_Click" Height="40" Padding="10,0,0,0" FontSize="24"/>
+        <Button Content="PLANOWANIE" FontSize="22" HorizontalContentAlignment="Left" Padding="10,0,0,0" Margin="28,128,566,0" VerticalAlignment="Top" Width="200" Name="btnPlanowanie2" Click="BtnPlanowanie2_Click" Height="40"/>
+        <Button Content="KONFIGURACJA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="28,173,568,0" VerticalAlignment="Top" Click="Button_Click" Height="40" Width="200"/>
     </Grid>
 </Window>
