--- a/ecoplastol/konfiguracja/produkcja/PanelProdOperatorzy.xaml
+++ b/ecoplastol/konfiguracja/produkcja/PanelProdOperatorzy.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ecoplastol.konfiguracja.produkcja.PanelProdMaszyny"
+﻿<UserControl x:Class="ecoplastol.konfiguracja.produkcja.PanelProdOperatorzy"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -49,7 +49,8 @@
         <DataGrid Grid.Row="0" Name="grdLista" SelectionChanged="GrdLista_SelectionChanged" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected" IsSynchronizedWithCurrentItem="True" CanUserDeleteRows="False" CanUserAddRows="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding id}" Header="ID" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="numerColumn" Binding="{Binding numer}" Header="Numer" Width="*"/>
+                <DataGridTextColumn x:Name="imieColumn" Binding="{Binding imie}" Header="Imię" Width="200"/>
+                <DataGridTextColumn x:Name="nazwiskoColumn" Binding="{Binding nazwisko}" Header="Nazwisko" Width="*"/>
                 <DataGridTextColumn x:Name="opwColumn" Binding="{Binding opw}" Header="opw" Width="100"/>
                 <DataGridTextColumn x:Name="czaswColumn" Binding="{Binding czasw, StringFormat=\{0:yyyy-MM-dd HH:mm\}}" Header="czasw" Width="150"/>
                 <DataGridTextColumn x:Name="opmColumn" Binding="{Binding opm}" Header="opm" Width="100"/>
@@ -68,16 +69,16 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" FontSize="18" Content="Numer :"/>
-            <!--<Label Grid.Row="1" Grid.Column="0" FontSize="18" Content="Wartość :"/>-->
+            <Label Grid.Row="0" Grid.Column="0" FontSize="18" Content="Imię :"/>
+            <Label Grid.Row="1" Grid.Column="0" FontSize="18" Content="Nazwisko :"/>
             <!--<Label Grid.Row="2" Grid.Column="0" FontSize="18" Content="Opis :"/>-->
 
-            <TextBox Grid.Row="0" Grid.Column="1" FontSize="18" VerticalContentAlignment="Center" Text="{Binding numer, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Name="txtNumer"/>
-            <!--<TextBox Grid.Row="1" Grid.Column="1" FontSize="18" VerticalContentAlignment="Center" Text="{Binding wartosc, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Name="txtWartosc"/>-->
+            <TextBox Grid.Row="0" Grid.Column="1" FontSize="18" VerticalContentAlignment="Center" Text="{Binding imie, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Name="txtImie"/>
+            <TextBox Grid.Row="1" Grid.Column="1" FontSize="18" VerticalContentAlignment="Center" Text="{Binding nazwisko, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Name="txtNazwisko"/>
             <!--<TextBox Grid.Row="2" Grid.Column="1" FontSize="18" VerticalContentAlignment="Center" Text="{Binding opis, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Name="txtOpis"/>-->
         </Grid>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-            <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnDodaj" Content="DODAJ" Click="BtnDodaj_Click" />
+            <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnDodaj" Content="DODAJ" Click="BtnDodaj_Click" Height="30" VerticalAlignment="Top" />
             <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnKlonuj" Content="KLONUJ" Click="BtnKlonuj_Click" Height="30" VerticalAlignment="Top" />
             <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnPopraw" Content="POPRAW" Click="BtnPopraw_Click" Height="30" VerticalAlignment="Top" />
             <Button FontSize="16" Style="{StaticResource btnGradientRed}" Width="120" Name="btnUsun" Content="USUŃ" Click="BtnUsun_Click" Height="30" VerticalAlignment="Top"/>
